[package]
name = "lazy-char-iter"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "Lazily iterate over Unicode characters from a u8 slice in Rust."
edition = "2021"
homepage = "https://github.com/dacut/lazy-char-iter"
license = "Apache-2.0"
repository = "https://github.com/dacut/lazy-char-iter"

[dependencies]
